# saut_dma_maze

./: .gitignore  AGENTS.md  LICENSE  Line_Follow (1).py  README.md  requirements.txt
.github/: copilot-instructions.md
.github/agents/: agentsmd-generator.agent.md
data/archive/: README.md
data/archive/reward0_baseline/: README.md  sweep.yaml
data/archive/reward0_baseline/training/qlearning/fixture_3x3/: selected.json
data/archive/reward0_baseline/training/qlearning/fixture_5x5_corridor/: selected.json
data/archive/reward0_baseline/training/qlearning/fixture_7x7_loop/: selected.json
data/archive/reward0_baseline/training/sarsa/fixture_3x3/: selected.json
data/archive/reward0_baseline/training/sarsa/fixture_5x5_corridor/: selected.json
data/archive/reward0_baseline/training/sarsa/fixture_7x7_loop/: selected.json
data/archive/reward10/: README.md
data/archive/reward10_7x7_tuned/: README.md
data/archive/reward10_pessimistic_init/: README.md  sweep.yaml
data/archive/reward10_pessimistic_init_7x7_rooms/: README.md  sweep.yaml
data/archive/reward10_pessimistic_init_7x7_tuned/: README.md  sweep.yaml
docs/: control.md  data_schema.md  deployment.md  future_work.md  mdp_design.md  turn_controller.md  tutorial.md  usage.md  visualization.md
scripts/: make_all_figures.sh  rerun_archive.sh
src/alphabot2_gazebo/: CMakeLists.txt  package.xml
src/alphabot2_gazebo/launch/: spawn_robot.launch.py
src/alphabot2_gazebo/urdf/: alphabot2.urdf
src/alphabot2_gazebo/worlds/: empty.world  fixture_3x3.world  fixture_5x5_corridor.world  fixture_7x7_loop.world  fixture_7x7_rooms.world
src/maze_bringup/: package.xml  setup.cfg  setup.py
src/maze_bringup/config/: params.yaml
src/maze_bringup/config/markers/: fixture_5x5_corridor.yaml
src/maze_bringup/config/mazes/: fixture_3x3.yaml  fixture_5x5_corridor.yaml  fixture_7x7_loop.yaml  fixture_7x7_rooms.yaml
src/maze_bringup/config/rviz/: compare.rviz  maze.rviz
src/maze_bringup/config/sweeps/: default.yaml
src/maze_bringup/config/sweeps/archive/: reward10.yaml  reward10_7x7_tuned.yaml
src/maze_bringup/launch/: alphabot_maze.launch.py  compare_viz.launch.py  executor_test.launch.py  gazebo_maze.launch.py  sim.launch.py  sim_viz.launch.py
src/maze_mdp/: package.xml  setup.cfg  setup.py
src/maze_mdp/maze_mdp/: __init__.py  _td.py  mdp.py  policy.py  qlearning.py  sarsa.py  simulator.py  tracking.py  value_iteration.py
src/maze_mdp/maze_mdp/analysis/: __init__.py  loaders.py  maze_to_sdf.py  plot_comparison.py  plot_convergence.py  plot_policy_heatmap.py  plot_steps_curve.py  select_best_run.py  style.py
src/maze_mdp/maze_mdp/control/: __init__.py  executor.py  ir_geom.py  line_pid.py
src/maze_mdp/maze_mdp/experiments/: __init__.py  runner.py  sweep.py
src/maze_mdp/maze_mdp/nodes/: __init__.py  action_executor.py  cell_tracker.py  compare_node.py  fiducial_localizer.py  ir_driver_gazebo.py  ir_driver_sim.py  maze_publisher.py  maze_sim_node.py  maze_viz_node.py  policy_runner.py
src/maze_mdp/maze_mdp/perception/: __init__.py  aruco_to_cell.py
src/maze_mdp/test/: test_aruco_to_cell.py  test_executor.py  test_ir_geom.py  test_line_pid.py  test_maze_to_sdf.py  test_mdp.py  test_pep257.py  test_runner.py  test_simulator.py  test_td_control.py  test_tracking.py  test_value_iteration.py
src/maze_msgs/: CMakeLists.txt  package.xml
src/maze_msgs/msg/: CellPose.msg  DiscreteActionGoal.msg  DiscreteActionResult.msg  MazeGrid.msg
src/maze_msgs/srv/: SetGoal.srv  SetStartPose.srv
(+654 files in other folders)
