<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alphabot2_gazebo</name>
  <version>0.1.0</version>
  <description>Minimal Gazebo Classic simulation of the Waveshare AlphaBot2 (diff-drive + camera) for the maze-MDP project. Ported from nestoregon/alphabot2pi_simulation (ROS 1) to ROS 2 Humble.</description>
  <maintainer email="dev@example.com">saut_dma_maze</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
